# habit_bot

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: ci-cd.yml  ci.yml  main.yml
config/: celery.py  settings.py  test_settings.py  urls.py
habit/: admin.py  models.py  paginators.py  serializers.py  services.py  task.py  tasks.py  tests.py  urls.py  views.py
habit/migrations/: 0001_initial.py  0002_completion.py
users/: models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
