[tool.poetry]
name = "habit-bot"
version = "0.1.0"
description = "Bot for tracking habits"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "habit" },
    { include = "users" },
    { include = "config" }
]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.7"
djangorestframework = "^3.15.2"
pillow = "^11.1.0"
python-dotenv = "^1.1.0"
psycopg2-binary = "^2.9.10"
django-filter = "^25.1"
djangorestframework-simplejwt = "^5.5.0"
pytest-cov = "^6.0.0"
coverage = "^7.7.1"
drf-yasg = "^1.21.10"
stripe = "^11.6.0"
celery = "^5.4.0"
eventlet = "^0.39.1"
redis = "^5.2.1"
django-celery-beat = "^2.7.0"
django-redis = "^5.4.0"
gevent = "^24.11.1"
flake8 = "^7.1.2"
django-cors-headers = "^4.7.0"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"
mypy = "^1.8.0"
pytest = "^8.0.2"
pytest-django = "^4.8.0"
whitenoise = "^6.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
